fix: add z-index higher than other modals

--- a/apps/appkit-minter/src/core/styles/index.css
+++ b/apps/appkit-minter/src/core/styles/index.css
@@ -148,4 +148,8 @@
     width: 100%;
     min-height: 100vh;
   }
+
+  #tc-widget-root {
+    z-index: 9999;
+  }
 }
